[package]
name = "rcp"
version = "0.1.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2018"

[dependencies]
ssh2 = { version = "0.8", features = ["vendored-openssl"]}
serde = {version = "1.0", features = ["derive"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
dirs = "2.0"
toml = "0.5"
